--- a/pachisim.html
+++ b/pachisim.html
@@ -60,7 +60,7 @@
 				<div>パチンコ期待値シミュレーター</div>
 				<h1>パチシム</h1>
 				<div>シミュレーターへ移動</div>
-				<input type="button" value="無料開放中（登録不要）" onclick="location.href='http://pachi777.info/sim_n1/WebForm1.aspx'">
+				<input type="button" value="無料開放中（登録不要）" >
 			</div>
 		</div>
 
@@ -132,7 +132,7 @@
 
 	<div class="last-button">
 		<div>シミュレーターへ移動</div>
-		<input type="button" value="無料開放中（登録不要）" onclick="location.href='http://pachi777.info/sim_n1/WebForm1.aspx'">
+		<input type="button" value="無料開放中（登録不要）" >
 
 	</div>			
 
