--- a/page-qlead-top.html
+++ b/page-qlead-top.html
@@ -41,7 +41,7 @@ Template Name:qleadTopPage
 
 			
 					<h1 class="header-logo">
-						<img onclick="location.href='https://www.qlead.info/'" class="qlead-logo" src="qlead-top-page/qleadImg/qleadlogo-cutout-cutout.png" alt="オンライン家庭教師Qlead（キューリード）|">
+						<img onclick="location.href='//www.qlead.info/'" class="qlead-logo" src="qlead-top-page/qleadImg/qleadlogo-cutout-cutout.png" alt="オンライン家庭教師Qlead（キューリード）|">
 					</h1>
 					
 
@@ -69,10 +69,10 @@ Template Name:qleadTopPage
 							</ul>
 						</li>
 
-						<li><a href="https://ameblo.jp/qlead/entry-12646779495.html" target="_blank" nofollow>受講者の声</a>
+						<li><a href="//ameblo.jp/qlead/entry-12646779495.html" target="_blank" nofollow>受講者の声</a>
 							<ul>
-								<li class="f-invisb"><a href="https://ameblo.jp/qlead/entrylist.html" target="_blank">受講者の声</a></li>
-								<li><a href="https://ameblo.jp/qlead/entrylist.html">日々のブログ</a></li>
+								<li class="f-invisb"><a href="//ameblo.jp/qlead/entrylist.html" target="_blank">受講者の声</a></li>
+								<li><a href="//ameblo.jp/qlead/entrylist.html">日々のブログ</a></li>
 							</ul>
 						</li>
 
@@ -373,7 +373,7 @@ Template Name:qleadTopPage
 					<img src="qlead-top-page/qleadImg/icon-taiken.png">無料体験申し込み
 				</button>
 
-				<button type="button" onclick="window.open('https://lin.ee/16ILYC8Q4','_blank')">
+				<button type="button" onclick="window.open('//lin.ee/16ILYC8Q4','_blank')">
 					<img src="qlead-top-page/qleadImg/icon-shidou.png">LINEで問い合わせる
 				</button>
 
@@ -424,7 +424,7 @@ Template Name:qleadTopPage
 					<img src="qlead-top-page/qleadImg/icon-taiken.png">無料体験申し込み
 				</button>
 
-				<button type="button" target="_blank" onclick="window.open('https://lin.ee/16ILYC8Q4','_blank')">
+				<button type="button" target="_blank" onclick="window.open('//lin.ee/16ILYC8Q4','_blank')">
 					<img src="qlead-top-page/qleadImg/icon-shidou.png">LINEで問い合わせる
 				</button>
 
@@ -456,12 +456,12 @@ Template Name:qleadTopPage
 
 			<div class="sns-icon">
 				<div class="snss">
-					<a href="https://twitter.com/qlead2">
+					<a href="//twitter.com/qlead2">
 						<object type="image/svg+xml" data="qlead-top-page/qleadImg/twitter.svg" width="25" height="25"></object>
 					</a>
 				</div>
 				<div class="snss2">
-					<a href="https://www.instagram.com/seicham_gram/">
+					<a href="//www.instagram.com/seicham_gram/">
 						<object type="image/svg+xml" data="qlead-top-page/qleadImg/instagram.svg" width="25" height="25"></object>
 					</a>
 				</div>
@@ -471,7 +471,7 @@ Template Name:qleadTopPage
 		<div class="f-right col-md-6">
 			<ul>
 				<!--<li><a href="">プライバシーポリシー</a></li>-->
-				<li><a href="https://ameblo.jp/qlead/entry-12629684461.html">講師紹介</a></li>
+				<li><a href="//ameblo.jp/qlead/entry-12629684461.html">講師紹介</a></li>
 				<!--<li><a href="">よくある質問</a></li></li>-->
 			</ul>
 		</div>
